Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignTextUndefined.quorum
class Main
    action Main
        text v = Test()
        if v = undefined
            output "passed"
        end
    end

    action Test() returns text
        return undefined
    end
end