Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextBooleanField.quorum
class Main
    text v = Test()
    action Main
    end

    action Test() returns text
        boolean var = true
        return var
    end
end